--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,13 @@ nav a.active {
   line-height: 1.6;
 }
 
+.icon img {
+  width: 75px;
+  height: 75px;
+  object-fit: contain;
+  filter: drop-shadow(0 0 2px rgba(0,0,0,.6));
+}
+
 @media (max-width: 768px) {
 
   .content {
